# FMC-backend-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  mac_build.yml
src/: 777_FMS.cpp  777_dr_decl.hpp  777_dr_init.hpp  CMakeLists.txt  input_filter.hpp
src/displays/: CMakeLists.txt
src/displays/PFD/: CMakeLists.txt  pfd.cpp  pfd.hpp
src/displays/common/: cairo_utils.hpp
src/fmc/: CMakeLists.txt  fmc_sys.cpp  fmc_sys.hpp  rad_nav.cpp  rad_nav.hpp
src/fmc/avionics/: CMakeLists.txt  avionics.cpp  avionics.hpp
src/fmc/avionics/rad_nav/: navaid_selector.cpp  navaid_selector.hpp  navaid_tuner.cpp  navaid_tuner.hpp  radio.cpp  radio.hpp
src/fmc/fmc/pages/: sel_desired_wpt.cpp
src/fmc/pages/: ref_nav.cpp  rte1.cpp  sel_desired_wpt.cpp
src/fmc/rad_nav/: CMakeLists.txt  navaid_selector.cpp  navaid_selector.hpp  navaid_tuner.cpp  navaid_tuner.hpp  radio.cpp
src/lib/: CMakeLists.txt
src/lib/libnav/: CMakeLists.txt  arpt_db.cpp  arpt_db.hpp  common.hpp  geo_utils.hpp  nav_db.cpp  nav_db.hpp  navaid_db.cpp  navaid_db.hpp  str_utils.hpp
src/lib/libtime/: CMakeLists.txt  timer.cpp  timer.hpp
src/lib/libxp/: CMakeLists.txt  common.hpp  databus.cpp  databus.hpp  dataref_structs.hpp  dr_cache.cpp  dr_cache.hpp
src/lib/xplane_sdk/: CMakeLists.txt
