FILE(GLOB LIBTIME_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
FILE(GLOB LIBTIME_HDR "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")

add_library(libtime STATIC ${LIBTIME_SRC} ${LIBTIME_HDR})
target_include_directories(libtime INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

if(WIN32)
	TARGET_COMPILE_OPTIONS(libtime PRIVATE "/MT$<$<CONFIG:Release>:d>")
endif(WIN32)

if(UNIX AND NOT APPLE)
    set_property(TARGET libtime PROPERTY POSITION_INDEPENDENT_CODE ON)
endif()
